@@ -1,4 +1,1 @@
-# MD5 checksums generated by MD5summer (http://www.md5summer.org)
-# Generated 2.1.2012 13:32:53
-
-ab45f031fc15c7a8bd6528e875d8897c *addons.xml
+a054f1963d0e6f76a004393bcdd7214b
