@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.dmd-czech.piratskefilmycz"
        name="Filmy CPS Archiv"
-       version="0.5"
+       version="0.6"
        provider-name="Ivo Brhel">
   <requires>
     <import addon="script.module.pysqlite" version="2.5.6"/>
     <import addon="xbmc.python" version="2.0"/>
-    <import addon="script.module.dmd-czech.common" version="0.9"/>
+    <import addon="script.module.dmd-czech.common" version="1.1"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
     <provides>video</provides>
