@@ -1,3 +1,5 @@
+2012-01-08:
+ * oprava skriptu videobb a videozer
 2011-12-07:
  * oprava skriptu videobb a videozer
 2011-09-29:
